Fixed search results spacing

--- a/less/etalab-search.less
+++ b/less/etalab-search.less
@@ -22,12 +22,15 @@ ul.search-results {
 
     .search-result {
         position: relative;
-        margin: 20px 0px;
         background: white;
         border-bottom: 1px solid @gray-lighter;
         overflow: hidden;
         zoom: 1;
-        padding: 0 0 14px;
+        padding: 18px 0;
+
+        &:first-of-type {
+           padding-top: 8px; 
+        }
 
         .result-logo {
             display: table-cell;
